<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.FrmHome_Language">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/img_back"
            android:layout_margin="@dimen/s5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/btn_back"/>

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/back"
            android:textSize="@dimen/s16"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="@dimen/s10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="@dimen/s18"
            android:id="@+id/tv_language" />
        <TextView
            android:id="@+id/tv_next"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:text="@string/next"
            android:textSize="@dimen/s16"
            android:textColor="@color/white"
            />
        <ImageView
            android:id="@+id/img_next"
            android:layout_margin="@dimen/s5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/btn_next"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_main_h">
        <LinearLayout
            android:layout_margin="@dimen/s10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_la"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s16"
                android:text="@string/textla"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/s20"
            android:layout_marginLeft="@dimen/s10"
            android:layout_marginRight="@dimen/s10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_begin"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s10"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Beginning"
                android:textSize="@dimen/s16" />

            <Switch
                android:textOn="Yes"
                android:textOff="No"
                android:layout_marginLeft="@dimen/s10"
                android:layout_gravity="center|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sw_beginningwith"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/s20"
            android:layout_marginLeft="@dimen/s10"
            android:layout_marginRight="@dimen/s10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_repeat1"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s10"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/repeat"
                android:textSize="@dimen/s16" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/s10"
            android:layout_marginRight="@dimen/s10"
            android:layout_marginBottom="@dimen/s10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_repeat2"
                android:layout_margin="@dimen/s10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s16"
                android:text="@string/textrepeat"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/s5"
            android:layout_marginLeft="@dimen/s10"
            android:layout_marginRight="@dimen/s10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_thecat"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s10"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/thecatalways"
                android:textSize="@dimen/s16" />

            <Switch
                android:textOn="Yes"
                android:textOff="No"
                android:layout_marginLeft="@dimen/s10"
                android:layout_gravity="center|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sw_thecat"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/s5"
            android:layout_marginLeft="@dimen/s10"
            android:layout_marginRight="@dimen/s10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_steve"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s10"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/steveisthe"
                android:textSize="@dimen/s16" />

            <Switch
                android:textOn="Yes"
                android:textOff="No"
                android:layout_marginLeft="@dimen/s10"
                android:layout_gravity="center|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sw_steveis"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
