<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.FrmHome_Abstract_Reasoning">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/img_back"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/btn_back"/>

        <TextView
            android:background="@drawable/custom_button_nextback"
            android:id="@+id/tv_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/back"
            android:textSize="@dimen/s16"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="@dimen/s10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ABSTRACT"
            android:textColor="@color/white"
            android:textSize="@dimen/s18"
            android:id="@+id/tv_abs" />
        <TextView
            android:visibility="invisible"
            android:id="@+id/tv_next"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="@dimen/s16"
            android:textColor="@color/white"
            />
        <ImageView
            android:visibility="invisible"
            android:id="@+id/img_next"
            android:layout_margin="@dimen/s5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/btn_next"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_main_h">
        <LinearLayout
            android:layout_marginTop="@dimen/s20"
            android:layout_marginLeft="@dimen/s16"
            android:layout_marginRight="@dimen/s16"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_ab"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/anorange"
                android:textSize="@dimen/s16" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/s5"
            android:layout_marginLeft="@dimen/s16"
            android:layout_marginRight="@dimen/s10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_quater"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s10"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/aquarter"
                android:textSize="@dimen/s16" />

            <Switch
                android:textOn="Yes"
                android:textOff="No"
                android:layout_gravity="center|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sw_aqua"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/s5"
            android:layout_marginLeft="@dimen/s16"
            android:layout_marginRight="@dimen/s10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_awatch"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s10"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/awatchand"
                android:textSize="@dimen/s16" />

            <Switch
                android:textOn="Yes"
                android:textOff="No"
                android:layout_gravity="center|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sw_awatch"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/s20"
            android:layout_marginLeft="@dimen/s16"
            android:layout_marginRight="@dimen/s16"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_click"
                android:gravity="center"
                android:layout_margin="@dimen/s10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clickthebutton"
                android:textSize="@dimen/s16" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">
            <Button
                android:id="@+id/bt_calculatescore"
                android:layout_margin="@dimen/s10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculatescore"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
